# egui-terminal

./: Cargo.toml
src/: app.rs  into.rs  lib.rs  main.rs  prelude.rs  term.rs
src/config/: term_config.rs
