[package]
edition = "2024"
name = "egui-terminal"
version = "0.1.0"

[dependencies]
crossbeam-channel = "0.5.8"
eframe = "0.31.1"
egui = "0.31.1"
wezterm-term = { git = "https://github.com/wez/wezterm", rev = "7d0bff0698813c9feeba91a342cd6df94aa34630" }
portable-pty = { git = "https://github.com/wez/wezterm", rev = "7d0bff0698813c9feeba91a342cd6df94aa34630" }
termwiz = { git = "https://github.com/wez/wezterm", rev = "7d0bff0698813c9feeba91a342cd6df94aa34630" }

